--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -95,22 +95,63 @@
 			    		<td>[[${user.lastName}]]</td>
 			    		<td>[[${user.roles}]]</td>
 			    		<td>
-			    			<i th:if="${user.enabled == true}" class="fa-solid fa-circle-check fa-2x icon-green"></i>
-			    			<i th:if="${user.enabled == false}" class="fa-solid fa-circle-check fa-2x icon-dark"></i>
+			    			<a th:if="${user.enabled == true}" class="fa-solid fa-circle-check fa-2x icon-green"
+			    				th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
+			    				title="Disable this user"></a>
+			    				
+			    			<a th:if="${user.enabled == false}" class="fa-solid fa-circle fa-2x icon-dark"
+			    				th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
+			    				title="Enable this user"></a>
 			    		</td>
 			    		<td>
-			    			<a class="fa-solid fa-pen-to-square fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}"
+			    			<a class="fa-solid fa-pen-to-square fa-2x icon-dark" th:href="@{'/users/edit/' + ${user.id}}"
 			    				title="Edit this user"></a>
-			    			<i class="fa-solid fa-trash fa-2x icon-dark"></i>
+			    				
+			    			<a class="fa-solid fa-trash fa-2x icon-red link-delete"
+			    				th:href="@{'/users/delete/' + ${user.id}}"
+			    				th:userId="${user.id}"
+			    				title="Delete this user"></a>
 			    		</td>
 			    	</tr>
 				</tbody>
 			</table>
 		</div>
 		
+		<div class="modal fade text-center" id="confirmModal">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h4 class="modal-title">Delete Confirmation</h4>
+						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+					</div>
+					
+					<div class="modal-body">
+						<span id="confirmText"></span>
+					</div>
+					
+					<div class="modal-footer">
+						<a class="btn btn-success" href="" id="yesButton">Yes</a>
+						<button type="button" class="btn btn-danger" data-bs-dismiss="modal">No</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<div class="text-center">
 			<p>Shopme Control Panel - Copyright &copy; Shopme</p>
 		</div>
 	</div>
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$(".link-delete").on("click", function(e) {
+				e.preventDefault();
+				link = $(this);
+				userId = link.attr("userId");
+				$("#yesButton").attr("href", link.attr("href"));
+				$("#confirmText").text("Are you sure you want to delete the user ID " + userId + "?");
+				$("#confirmModal").modal('show');
+			});
+		});
+	</script>
 </body>
 </html>
