--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -88,7 +88,9 @@
 			    	<tr th:each="user : ${listUsers}">
 			    		<td>[[${user.id}]]</td>
 			    		<td>
-			    			<i class="fa-solid fa-image-portrait fa-3x icon-silver"></i>
+			    			<span th:if="${user.photo == null}" class="fa-solid fa-image-portrait fa-3x icon-silver"></span>
+			    			<img th:if="${user.photo != null}" th:src="@{${user.photoPath}}"
+			    				style="width: 100px" />
 			    		</td>
 			    		<td>[[${user.email}]]</td>
 			    		<td>[[${user.firstName}]]</td>
