--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/templates/users.html
@@ -74,14 +74,86 @@
 			<table class="table table-bordered table-striped table-hover">
 				<thead>
 					<tr class="table-dark">
-						<th>User ID</th>
+						<th>
+							<a th:if="${sortField != 'id'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDirec=' + ${sortDirec}}">
+								User ID
+							</a>
+							
+							<a th:if="${sortField == 'id'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=id&sortDirec=' + ${reverseSortDirec}}">
+								User ID
+							</a>
+							
+							<span th:if="${sortField == 'id'}" 
+								th:class="${sortDirec == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+						</th>
+						
 						<th>Photos</th>
-						<th>E-mail</th>
-						<th>First Name</th>
-						<th>Last Name</th>
+						
+						<th>
+							<a th:if="${sortField != 'email'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDirec=' + ${sortDirec}}">
+								E-mail
+							</a>
+							
+							<a th:if="${sortField == 'email'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=email&sortDirec=' + ${reverseSortDirec}}">
+								E-mail
+							</a>
+							
+							<span th:if="${sortField == 'email'}"
+								th:class="${sortDirec == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+						</th>
+						
+						<th>
+							<a th:if="${sortField != 'firstName'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDirec=' + ${sortDirec}}">
+								First Name
+							</a>
+							
+							<a th:if="${sortField == 'firstName'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=firstName&sortDirec=' + ${reverseSortDirec}}">
+								First Name
+							</a>
+							
+							<span th:if="${sortField == 'firstName'}" 
+								th:class="${sortDirec == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+						</th>
+						
+						<th>
+							<a th:if="${sortField != 'lastName'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDirec=' + ${sortDirec}}">
+								Last Name
+							</a>
+							
+							<a th:if="${sortField == 'lastName'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=lastName&sortDirec=' + ${reverseSortDirec}}">
+								Last Name
+							</a>
+							
+							<span th:if="${sortField == 'lastName'}"
+								th:class="${sortDirec == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+						</th>
+						
 						<th>Roles</th>
-						<th>Enabled</th>
-						<th></th>
+						
+						<th>
+							<a th:if="${sortField != 'enabled'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDirec=' + ${sortDirec}}">
+								Enabled
+							</a>
+							
+							<a th:if="${sortField == 'enabled'}" style="text-decoration:none; color:white;"
+								th:href="@{'/users/page/' + ${currentPage} + '?sortField=enabled&sortDirec=' + ${reverseSortDirec}}">
+								Enabled
+							</a>
+							
+							<span th:if="${sortField == 'enabled'}"
+								th:class="${sortDirec == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+						</th>
+						
+						<th>Edit/Delete</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -117,6 +189,40 @@
 			    	</tr>
 				</tbody>
 			</table>
+		</div>
+		
+		<div class="text-center m-1" th:if="${startCount <= totalItems}">
+			<span>Showing users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+		</div>
+		<div class="text-center m-1" th:unless="${startCount <= totalItems}">
+			<span>No users found</span>
+		</div>
+		
+		<div>
+			<nav>
+				<ul class="pagination justify-content-center">
+					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+						<a class="page-link" th:href="@{'/users/page/1?sortField=' + ${sortField} + '&sortDirec=' + ${sortDirec}}">First</a>
+					</li>
+					
+				    <li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+				    	<a class="page-link" th:href="@{'/users/page/' + ${currentPage - 1} + '?sortField=' + ${sortField} + '&sortDirec=' + ${sortDirec}}">Previous</a>
+			    	</li>
+			    	
+					<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}"
+						th:each="i : ${#numbers.sequence(1, totalPages)}">
+						<a class="page-link" th:href="@{'/users/page/' + ${i} + '?sortField=' + ${sortField} + '&sortDirec=' + ${sortDirec}}">[[${i}]]</a>
+					</li>
+					
+				    <li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+				    	<a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1} + '?sortField=' + ${sortField} + '&sortDirec=' + ${sortDirec}}">Next</a>
+			    	</li>
+			    	
+			    	<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+				    	<a class="page-link" th:href="@{'/users/page/' + ${totalPages} + '?sortField=' + ${sortField} + '&sortDirec=' + ${sortDirec}}">Last</a>
+			    	</li>
+				</ul>
+			</nav>
 		</div>
 		
 		<div class="modal fade text-center" id="confirmModal">
